# storage/api-docs/api-docs.json
@@ -2108,6 +2108,32 @@
                                         },
                                         "type": "object"
                                     }
+                                },
+                                "image": {
+                                    "description": "Image of the recipe.",
+                                    "properties": {
+                                        "file_url": {
+                                            "description": "URL of the image.",
+                                            "type": "string",
+                                            "example": "https://example.com/image.jpg"
+                                        },
+                                        "file_name": {
+                                            "description": "Name of the image.",
+                                            "type": "string",
+                                            "example": "image.jpg"
+                                        },
+                                        "file_path": {
+                                            "description": "Path of the image.",
+                                            "type": "string",
+                                            "example": "images/recipe/1/image.jpg"
+                                        },
+                                        "mime_type": {
+                                            "description": "Mime type of the image.",
+                                            "type": "string",
+                                            "example": "image/jpeg"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             },
                             "type": "object"
